# nuonuo-pet

./: .env.docker  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_MANIFEST.md  README.md  docker-compose.yml  firmware.rar  setup.bat  setup.sh  start.bat  start.sh
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: llm_api.py  llm_context_builder.py  llm_conversation_service.py  llm_health_check.py  llm_model_manager.py  llm_providers.py  main.py  memory_enhanced.py  model_caller.py  models.py  pet_growth.py  security.py  security_simple.py  storage.py  ui_bulk_ops.py  ui_context_builders.py  ui_context_dashboard_debug.py  ui_context_management.py  ui_context_resources.py  ui_helpers.py  ui_page_common.py  ui_pages.py  ui_pages_dashboard.py  ui_pages_debug.py  ui_pages_devices.py  ui_pages_management.py  ui_pages_misc.py  ui_pages_pets.py  ui_pages_resources_config.py
backend/app/api/: websocket.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: models.py
backend/app/services/: pet_service.py
backend/app/services/emotion/: __init__.py
backend/app/services/growth/: __init__.py
backend/app/services/memory/: __init__.py
backend/app/services/model_router/: __init__.py
backend/data/: state.json
backend/data/llm_config/: config.json  models.json  providers.json
backend/docs/: api_draft.md  pet_api_draft.md
backend/tests/: conftest.py  run_ui_smoke.py  test_api.py  test_emotion.py  test_growth.py  test_llm_basic.py
(+59 files in other folders)
