[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuonuo-pet-backend"
version = "0.1.0"
description = "nuonuo-pet backend skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"app" = "app"
